update index.html - nicer style and links

--- a/index.html
+++ b/index.html
@@ -4,52 +4,101 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Datenschutzerklärung - SüdpfalzStoner Chilllounge Bot</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #f5f5f5;
+            margin: 0;
+            padding: 30px;
+            color: #333;
+        }
+        .container {
+            max-width: 800px;
+            margin: auto;
+            background-color: #ffffff;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            color: #2c7a7b;
+            text-align: center;
+        }
+        h2 {
+            color: #319795;
+            margin-top: 30px;
+        }
+        p, li {
+            line-height: 1.6;
+        }
+        ul {
+            padding-left: 20px;
+        }
+        footer {
+            margin-top: 50px;
+            text-align: center;
+            font-size: 0.9em;
+            color: #666;
+        }
+    </style>
 </head>
-<body style="font-family: Arial, sans-serif; padding: 20px; background-color: #f9f9f9;">
-    <h1>📜 Datenschutzerklärung (Privacy Policy)</h1>
+<body>
 
-    <p>Dieser Bot [StonerMOD_bot] ("SüdpfalzStoner Chilllounge Bot") wird ausschließlich für die private Telegram-Community betrieben.</p>
+    <div class="container">
+        <h1>📜 Datenschutzerklärung</h1>
 
-    <h2>Erfasste Daten:</h2>
-    <ul>
-        <li>Telegram-Benutzer-ID sowie, sofern vorhanden, Benutzername, Vorname und Nachname.</li>
-        <li>Chat-Interaktionen im Rahmen folgender Systeme:
-            <ul>
-                <li>Levelsystem (gesammelte XP pro Nutzer)</li>
-                <li>Casinosystem (Coins pro Nutzer)</li>
-                <li>Rollenverwaltung (vergebene Rolle pro Nutzer)</li>
-                <li>Warnsystem (Verwarnungen inkl. Grund pro Nutzer)</li>
-                <li>Report-System (Zwischenspeicherung der letzten 100 Nachrichten für Reports)</li>
-                <li>Support-System (Übermittlung und Bearbeitung von Supportanfragen)</li>
-            </ul>
-        </li>
-    </ul>
+        <p>Dieser Bot 🤖<a href="https://t.me/StonerMOD_bot" target="_blank">StonerMOD Bot</a> ("SüdpfalzStoner Chilllounge Bot") wird ausschließlich für die private Telegram-Community 🌿<a href="https://t.me/SuedpfalzStonerChilllounge" target="_blank">SüdpfalzStonerChilllounge</a> betrieben.</p>
 
-    <h2>Verwendung der Daten:</h2>
-    <p>Die Daten werden ausschließlich zur Verwaltung gruppenspezifischer Funktionen innerhalb der SüdpfalzStoner Chilllounge verwendet.</p>
+        <h2>Erfasste Daten</h2>
+        <ul>
+            <li>Telegram-Benutzer-ID sowie, sofern vorhanden, Benutzername, Vorname und Nachname.</li>
+            <li>Chat-Interaktionen:
+                <ul>
+                    <li>Levelsystem (gesammelte XP pro Nutzer)</li>
+                    <li>Casinosystem (Coins pro Nutzer)</li>
+                    <li>Rollenverwaltung (vergebene Rolle pro Nutzer)</li>
+                    <li>Warnsystem (Verwarnungen inkl. Grund pro Nutzer)</li>
+                    <li>Report-System (letzte 100 Nachrichten bei Reports)</li>
+                    <li>Support-System (Bearbeitung von Anfragen)</li>
+                </ul>
+            </li>
+        </ul>
 
-    <h2>Speicherung:</h2>
-    <p>Alle Daten werden lokal und/oder verschlüsselt gespeichert.</p>
+        <h2>Verwendung der Daten</h2>
+        <p>Die Daten werden ausschließlich zur Verwaltung gruppenspezifischer Funktionen innerhalb der SüdpfalzStoner Chilllounge verwendet.</p>
 
-    <h2>Weitergabe:</h2>
-    <ul>
-        <li>Es erfolgt keinerlei Weitergabe oder Verkauf der erhobenen Daten an Dritte.</li>
-        <li>Die Nachrichtencaches im Report- und Supportsystem werden nach Bearbeitung der jeweiligen Anfrage gelöscht.</li>
-        <li>Private Nachrichten, Bilder oder vollständige Gruppeninhalte werden nicht dauerhaft gespeichert oder weitergegeben.</li>
-    </ul>
+        <h2>Speicherung</h2>
+        <p>Alle Daten werden lokal und/oder verschlüsselt gespeichert.</p>
 
-    <h2>Was nicht gespeichert wird:</h2>
-    <ul>
-        <li>Es werden keine privaten Chatverläufe dauerhaft archiviert.</li>
-        <li>Es werden keine Telefonnummern, E-Mail-Adressen oder Standortdaten gespeichert.</li>
-    </ul>
+        <h2>Weitergabe</h2>
+        <ul>
+            <li>Keine Weitergabe oder Verkauf der Daten an Dritte.</li>
+            <li>Nachrichtencaches werden nach Bearbeitung gelöscht.</li>
+            <li>Private Nachrichten, Bilder oder Gruppeninhalte werden nicht dauerhaft gespeichert oder weitergegeben.</li>
+        </ul>
 
-    <h2>Zustimmung:</h2>
-    <p>Mit der Nutzung dieses Bots erklärst du dich mit der oben beschriebenen Datenverarbeitung einverstanden.</p>
+        <h2>Was nicht gespeichert wird</h2>
+        <ul>
+            <li>Keine privaten Chatverläufe.</li>
+            <li>Keine Telefonnummern, E-Mail-Adressen oder Standortdaten.</li>
+        </ul>
 
-    <h2>Fragen und Kontakt:</h2>
-    <p>Bei Fragen oder Anliegen zur Datennutzung kannst du dich jederzeit an unser Support-Team im Support-Channel wenden.</p>
+        <h2>Zustimmung</h2>
+        <p>Mit der Nutzung dieses Bots erklärst du dich mit der beschriebenen Datenverarbeitung einverstanden.</p>
 
-    <p>🌿 High Vibes – eure Südpfalz Stoner Community 🌿</p>
+        <h2>Kontakt</h2>
+        <p>Bei Fragen oder Anliegen bitte den Support-Channel der Community kontaktieren. 🌿</p>
+
+        <h2>Links</h2>
+        <ul>
+            <li><a href="https://t.me/SuedpfalzStonerChilllounge" target="_blank">🌿 Zur SüdpfalzStoner Chilllounge Telegram-Gruppe</a></li>
+            <li><a href="https://t.me/StonerMOD_bot" target="_blank">🤖 Zum StonerMOD Bot</a></li>
+        </ul>
+
+        <footer>
+            🌿 High Vibes – SüdpfalzStoner Chilllounge 🌿
+        </footer>
+    </div>
+
 </body>
 </html>
