update for newer and correct privacy policy

--- a/index.html
+++ b/index.html
@@ -52,24 +52,25 @@
         <h1 style="word-break: break-word;">📜 Datenschutzerklärung</h1>
 
         <p>Dieser Bot 🤖<a href="https://t.me/StonerMOD_bot" target="_blank">StonerMOD Bot</a> ("SüdpfalzStoner Chilllounge Bot") wird ausschließlich für die private Telegram-Community 🌿<a href="https://t.me/SuedpfalzStonerChilllounge" target="_blank">SüdpfalzStonerChilllounge</a> betrieben.</p>
-
+        <h2>📌 Kurzüberblick</h2>
+        <p>Der Bot verarbeitet ausschließlich die für die Community-Verwaltung notwendigen Daten. Alle Daten werden lokal gespeichert, nicht weitergegeben und nur für die folgenden Systeme genutzt:</p>
         <h2>📊 Übersicht der genutzten Systeme und erfassten Daten</h2>
         <ul>
-            <li><strong>Levelsystem:</strong> Verfolgt die gesammelten Erfahrungspunkte (XP) jedes Nutzers. Dabei werden Telegram-ID und (sofern vorhanden) Username und Vor-/Nachname zur Nutzerzuordnung gespeichert.</li>
-            <li><strong>Casinosystem:</strong> Verwalten von virtuellen Coins für Casino-Spiele. Dabei wird die Telegram-ID zur Nutzerzuordnung gespeichert.</li>
-            <li><strong>Rollenverwaltung:</strong> Zuweisung und Verwaltung von Nutzerrollen innerhalb der Community. Dabei werden Telegram-ID und (sofern vorhanden) Username und Vor-/Nachname zur Nutzerzuordnung gespeichert.</li>
-            <li><strong>Warnsystem:</strong> Speichert Verwarnungen inklusive der jeweiligen Gründe + Zeit pro Nutzer. Dabei wird nur die Telegram-ID verwendet.</li>
-            <li><strong>Report-System:</strong> Temporäre Speicherung der letzten 100 Nachrichten inklusive Telegram-ID (sofern vorhanden auch Username) zur Bearbeitung von Meldungen.</li>
-            <li><strong>Support-System:</strong> Verwaltung und Bearbeitung von Support-Anfragen der Nutzer, inklusive Telegram-ID und (sofern vorhanden) Username und Vor-/Nachname.</li>
-            <li><strong>Gewinnspiel-System:</strong> Erfasst Teilnehmerdaten (Telegram-ID, (sofern vorhanden) Username und Vor-/Nachname) zur Durchführung von Gewinnspielen.</li>
-            <li><strong>Verifizierungssystem:</strong> Nutzt Telegram-ID (sofern vorhanden) Username und Vor-/Nachname zur Identifikation und Freigabe von Mitgliedern.</li>
+            <li><strong>Levelsystem:</strong> Erfasst und speichert XP, Level, Rang, Beschreibung. Zur Nutzerzuordnung: Telegram-ID und (sofern vorhanden) Username, Vor- und Nachname.</li>
+            <li><strong>Casinosystem:</strong> Verwalten von virtuellen Coins und Gewinnverläufen. Gespeichert wird die Telegram-ID zur Zuordnung.</li>
+            <li><strong>Rollenverwaltung:</strong> Speicherung der gewählten Rollen sowie Telegram-ID und (sofern vorhanden) Username, Vor- und Nachname zur Darstellung im Profil.</li>
+            <li><strong>Warnsystem:</strong> Verwaltung von Verwarnungen inkl. Grund und Zeitstempel. Gespeichert wird nur die Telegram-ID.</li>
+            <li><strong>Report-System:</strong> Zwischenspeicherung der letzten 100 Nachrichten (Textinhalt, Telegram-ID, Username – falls vorhanden) zur Moderation.</li>
+            <li><strong>Support-System:</strong> Speicherung und Weiterleitung (Admins) von Supportanfragen inklusive Telegram-ID, Username, Vor- und Nachname.</li>
+            <li><strong>Gewinnspiel-System:</strong> Speicherung der Teilnehmer (Telegram-ID und (sofern vorhanden) Username, Vor-/Nachname, optionaler Instagram-Name), Gewinnerauswahl, Speicherung der Gewinner-ID zur Dokumentation.</li>
+            <li><strong>Verifizierungssystem:</strong> Speichert Telegram-ID und (sofern vorhanden) Username, Vor-/Nachname zum Nachweis und zur Freischaltung der Mitglieder.</li>
         </ul>
 
         <h2>Verwendung der Daten</h2>
         <p>Die Daten werden ausschließlich zur Verwaltung gruppenspezifischer Funktionen innerhalb der SüdpfalzStoner Chilllounge verwendet.</p>
 
         <h2>Speicherung</h2>
-        <p>Alle Daten werden lokal auf dem Server gespeichert und/oder verschlüsselt verarbeitet. RedisServer wird ausschließlich lokal verwendet und enthält nur temporäre Daten (z. B. letzte 100 Nachrichten zur Bearbeitung von Meldungen), die automatisch überschrieben und nicht dauerhaft archiviert werden.</p>
+        <p>Alle Daten (bis auf MessageCache für Reports) werden lokal auf dem Server gespeichert und/oder verschlüsselt verarbeitet. RedisServer dient ausschließlich der kurzfristigen Zwischenspeicherung zur Moderation (Reports, etc.) und wird lokal auf dem Server betrieben. Eine dauerhafte Speicherung erfolgt nicht.</p>
 
         <h2>Weitergabe</h2>
         <ul>
@@ -86,7 +87,7 @@
         </ul>
 
         <h2>Zustimmung</h2>
-        <p>Mit der Nutzung dieses Bots erklärst du dich mit der beschriebenen Datenverarbeitung einverstanden.</p>
+        <p>Mit der Nutzung dieses Bots erklärst du dich gemäß dieser Datenschutzerklärung mit der beschriebenen Verarbeitung deiner Daten einverstanden.</p>
 
         <h2>Kontakt</h2>
         <p>Bei Fragen oder Anliegen bitte den Support-Channel der Community kontaktieren. 🌿</p>
